vcl/qt5/QtGraphics_GDI.cxx
@@ -746,10 +746,17 @@ void QtGraphics::GetResolution(sal_Int32& rDPIX, sal_Int32& rDPIY)
         return;
     }
 
-    if (!m_pFrame || !m_pFrame->GetQWidget()->window()->windowHandle())
+    if (!m_pFrame)
+        return;
+
+#if QT_VERSION >= QT_VERSION_CHECK(5, 14, 0)
+    QScreen* pScreen = m_pFrame->GetQWidget()->screen();
+#else
+    if (!m_pFrame->GetQWidget()->window()->windowHandle())
         return;
 
     QScreen* pScreen = m_pFrame->GetQWidget()->window()->windowHandle()->screen();
+#endif
     rDPIX = pScreen->logicalDotsPerInchX() * pScreen->devicePixelRatio() + 0.5;
     rDPIY = pScreen->logicalDotsPerInchY() * pScreen->devicePixelRatio() + 0.5;
 }
